--- a/html/ingredientes/filete_de_ternera.html
+++ b/html/ingredientes/filete_de_ternera.html
@@ -12,5 +12,6 @@
     </head>
     <h2>Descripcion del filete de ternera</h2>
     <p>Habitualmente el animal es macho y la edad oscila entre los dos y seis meses. Si está siendo alimentado por leche de la madre se conoce como ternera lechal. La molla es tierna y posee poca grasa.</p>
-    <img src="/1_LLMM-actividad2.2/img/img/filete de cachopo.jpeg" alt="Filete de ternera">
-    <a href="/1_LLMM-actividad2.2/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
+    <img src="/img/filete de cachopo.jpeg" alt="Filete de ternera"> <br>
+    
+    <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
