--- a/html/ingredientes/huevo.html
+++ b/html/ingredientes/huevo.html
@@ -12,5 +12,6 @@
     </head>
     <h2>Descripcion del huevo</h2>
     <p>Cuerpo redondeado , de tamaño y dureza variables , que producen las hembras de las aves o de otras especies animales , y que contiene el germen del embrión y las sustancias destinadas a su nutrición durante la incubación.</p>
-    <img src="/1_LLMM-actividad2.2/img/img/huevo.jpeg" alt="Huevo">
-    <a href="/1_LLMM-actividad2.2/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
+    <img src="/img/huevo.jpeg" alt="Huevo"> <br>
+    
+    <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
