--- a/html/ingredientes/jamon.html
+++ b/html/ingredientes/jamon.html
@@ -12,5 +12,6 @@
     </head>
     <h2>Descripcion del jamon</h2>
     <p>El jamón es el producto obtenido de las patas traseras del cerdo, salado en crudo y curado de forma natural. Las patas delanteras del cerdo, pese a tener un proceso idéntico de elaboración, reciben el nombre de paleta, o paletilla.</p>
-    <img src="/1_LLMM-actividad2.2/img/img/jamon.jpeg" alt="Jamon">
-    <a href="/1_LLMM-actividad2.2/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
+    <img src="/img/jamon.jpeg" alt="Jamon"> <br>
+    
+    <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
