--- a/html/ingredientes/pan_rallado.html
+++ b/html/ingredientes/pan_rallado.html
@@ -12,5 +12,6 @@
     </head>
     <h2>Descripcion del pan rallado</h2>
     <p>El pan rallado es pan duro, generalmente seco de varios días, que ha sido finamente picado mediante un rallador.</p>
-    <img src="/1_LLMM-actividad2.2/img/img/pan rallado.jpeg" alt="Pan rallado">
-    <a href="/1_LLMM-actividad2.2/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
+    <img src="/img/pan rallado.jpeg" alt="Pan rallado"> <br>
+    
+    <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
