--- a/html/ingredientes/queso.html
+++ b/html/ingredientes/queso.html
@@ -13,7 +13,7 @@
     <body>
     <h2>Descripcion del queso</h2>
     <p>El queso es un alimento elaborado a partir de la leche cuajada de vaca, cabra, oveja u otros mamíferos.Sus diferentes estilos y sabores son el resultado del uso de distintas especies de bacterias y mohos, niveles de nata en la leche, curación, tratamientos en su proceso, etc.</p>
-    <img src="/1_LLMM-actividad2.2/img/img/queso.jpeg" alt="Queso">  <br>
-    <a href="/1_LLMM-actividad2.2/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a> <br>
+    <img src="/" alt="Queso">  <br>
+    <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a> <br>
     </body>
     </html>
