--- a/html/ingredientes/harina.html
+++ b/html/ingredientes/harina.html
@@ -12,5 +12,6 @@
     </head>
     <h2>Descripcion de la harina</h2>
     <p>La harina es el producto finamente triturado resultante de la molturación del grano de trigo.</p>
-    <img src="/1_LLMM-actividad2.2/img/img/harina.jpeg" alt="Harina">
-    <a href="/1_LLMM-actividad2.2/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
+    <img src="/img/harina.jpeg" alt="Harina"> <br>
+    
+    <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
