--- a/html/ingredientes/filete_de_ternera.html
+++ b/html/ingredientes/filete_de_ternera.html
@@ -9,9 +9,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            A{
+                text-decoration: none
+            }
+           
+        </style>
     </head>
     <h2>Descripcion del filete de ternera</h2>
     <p>Habitualmente el animal es macho y la edad oscila entre los dos y seis meses. Si está siendo alimentado por leche de la madre se conoce como ternera lechal. La molla es tierna y posee poca grasa.</p>
     <img src="/img/filete de cachopo.jpeg" alt="Filete de ternera"> <br>
-    
+
     <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
