--- a/html/ingredientes/harina.html
+++ b/html/ingredientes/harina.html
@@ -9,9 +9,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            A{
+                text-decoration: none
+            }
+           
+        </style>
     </head>
     <h2>Descripcion de la harina</h2>
     <p>La harina es el producto finamente triturado resultante de la molturación del grano de trigo.</p>
     <img src="/img/harina.jpeg" alt="Harina"> <br>
-    
+
     <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
