--- a/html/ingredientes/huevo.html
+++ b/html/ingredientes/huevo.html
@@ -9,9 +9,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            A{
+                text-decoration: none
+            }
+           
+        </style>
     </head>
     <h2>Descripcion del huevo</h2>
     <p>Cuerpo redondeado , de tamaño y dureza variables , que producen las hembras de las aves o de otras especies animales , y que contiene el germen del embrión y las sustancias destinadas a su nutrición durante la incubación.</p>
     <img src="/img/huevo.jpeg" alt="Huevo"> <br>
-    
+
     <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
