--- a/html/ingredientes/jamon.html
+++ b/html/ingredientes/jamon.html
@@ -9,6 +9,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            A{
+                text-decoration: none
+            }
+           
+        </style>
     </head>
     <h2>Descripcion del jamon</h2>
     <p>El jamón es el producto obtenido de las patas traseras del cerdo, salado en crudo y curado de forma natural. Las patas delanteras del cerdo, pese a tener un proceso idéntico de elaboración, reciben el nombre de paleta, o paletilla.</p>
