--- a/html/ingredientes/pan_rallado.html
+++ b/html/ingredientes/pan_rallado.html
@@ -9,9 +9,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            A{
+                text-decoration: none
+            }
+           
+        </style>
     </head>
     <h2>Descripcion del pan rallado</h2>
     <p>El pan rallado es pan duro, generalmente seco de varios días, que ha sido finamente picado mediante un rallador.</p>
     <img src="/img/pan rallado.jpeg" alt="Pan rallado"> <br>
-    
+
     <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a>
