--- a/html/ingredientes/queso.html
+++ b/html/ingredientes/queso.html
@@ -9,11 +9,18 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            A{
+                text-decoration: none
+            }
+           
+        </style>
     </head>
     <body>
     <h2>Descripcion del queso</h2>
     <p>El queso es un alimento elaborado a partir de la leche cuajada de vaca, cabra, oveja u otros mamíferos.Sus diferentes estilos y sabores son el resultado del uso de distintas especies de bacterias y mohos, niveles de nata en la leche, curación, tratamientos en su proceso, etc.</p>
-    <img src="/" alt="Queso">  <br>
+    <img src="/img/queso.jpeg" alt="Queso">  <br>
+
     <a href="/html/ingredientes.html"> Pincha aquí para ver los ingredientes</a> <br>
     </body>
     </html>
